--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -36,6 +36,8 @@ jobs:
           pip install -r requirements.txt
           
       - name: Execute tests
-        run: pytest
+        run: |
+          source env/bin/activate
+          pytest
         
    
