--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -39,5 +39,16 @@ jobs:
         run: |
           source env/bin/activate
           pytest
+          
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+            aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+            aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            aws-session-token: ${{ secrets.AWS_SESSION_TOKEN }}
+            aws-region: us-east-1
         
+      - name: Prueba AWS credentials listar buckets
+        run: aws s3 ls
+      
    
